--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_hooks: ^0.15.0
   email_validator: ^1.0.6
   equatable: ^1.2.6
+  flutter_slidable: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
